Packages using provides code wot i dont think compiles anyway lole just push it lel im tired its 2am lol heh dont feel like finishing this lol and this thing in vcpkg is taking forever to build lole #lol #lole #lel #kek #jej #rofl #roflcoper
I need to add a nice argument for these too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,7 +138,7 @@ include(SuperTux/AddPackage)
 
 # Find dependencies
 add_package(TARGET SDL2 PKG SDL2 PKG_USE SDL2::SDL2 CONFIG REQUIRED PKG_CONFIG sdl2)
-add_package(TARGET PNG PKG PNG PKG_USE PNG::PNG PKG_CONFIG libpng CONFIG REQUIRED) # lol
+add_package(TARGET PNG PKG PNG PKG_USE PNG::PNG PKG_CONFIG libpng REQUIRED) # lol
 add_package(TARGET SDL2_image PKG SDL2_image PKG_USE SDL2_image::SDL2_image CONFIG REQUIRED PKG_CONFIG sdl2_image)
 add_package(TARGET SDL2_ttf PKG SDL2_ttf PKG_USE SDL2_ttf::SDL2_ttf CONFIG REQUIRED PKG_CONFIG sdl2_ttf)
 add_package(TARGET CURL PKG CURL PKG_USE CURL::libcurl PKG_CONFIG libcurl)
@@ -148,15 +148,19 @@ add_package(TARGET Vorbis PKG Vorbis PKG_USE Vorbis::vorbis CONFIG REQUIRED PKG_
 add_package(TARGET VorbisFile PKG Vorbis PKG_USE Vorbis::vorbisfile CONFIG REQUIRED PKG_CONFIG vorbisfile)
 add_package(TARGET glm PKG glm PKG_USE glm::glm CONFIG REQUIRED PKG_CONFIG glm)
 add_package(TARGET fmt PKG fmt PKG_USE fmt::fmt CONFIG REQUIRED PKG_CONFIG fmt)
-add_package(TARGET PhysFS PKG PhysFS PKG_USE PhysFS::PhysFS CONFIG REQUIRED PKG_CONFIG physfs PROVIDES ProvidePhysfs)
+# TODO
+add_package(TARGET PhysFS PKG PhysFS PKG_USE PhysFS::PhysFS CONFIG REQUIRED PKG_CONFIG physfs)
+add_package(TARGET ZLIB PKG ZLIB PKG_USE ZLIB::ZLIB PKG_CONFIG zlib REQUIRED)
 
 add_subdirectory(external/SDL_SavePNG)
-include(SuperTux/ProvideSimpleSquirrel)
-include(SuperTux/ProvideDiscord)
-include(SuperTux/ProvideSexpcpp)
-include(SuperTux/ProvidePartioZip)
+add_subdirectory(external/simplesquirrel)
+add_subdirectory(external/discord-sdk)
+add_subdirectory(external/sexp-cpp)
+add_subdirectory(external/partio_zip)
+add_subdirectory(external/tinygettext) # NOTE need libiconv for this
 include(SuperTux/ProvideOpenGL)
-include(SuperTux/ProvideTinygettext)
+
+target_link_libraries(supertux2 PUBLIC OpenAL)
 
 ## Build stuff
 include(SuperTux/BuildVersion)
@@ -225,11 +229,11 @@ set_target_properties(LibSavePNG PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 ## Link supertux binary with squirrel and other libraries
 
-target_link_libraries(supertux2 PUBLIC LibSimpleSquirrel)
-target_link_libraries(supertux2 PUBLIC LibTinygettext)
-target_link_libraries(supertux2 PUBLIC LibSexp)
-target_link_libraries(supertux2 PUBLIC LibSavePNG)
-target_link_libraries(supertux2 PUBLIC LibPartioZip)
+target_link_libraries(supertux2 PUBLIC simplesquirrel)
+target_link_libraries(supertux2 PUBLIC tinygettext)
+target_link_libraries(supertux2 PUBLIC sexp)
+target_link_libraries(supertux2 PUBLIC SDLSavePNG)
+target_link_libraries(supertux2 PUBLIC PartioZip)
 target_link_libraries(supertux2 PUBLIC OpenAL)
 target_link_libraries(supertux2 PUBLIC glm)
 target_compile_definitions(supertux2 PUBLIC GLM_ENABLE_EXPERIMENTAL)
@@ -259,7 +263,7 @@ if(HAVE_OPENGL)
 endif()
 
 if(ENABLE_DISCORD)
-  target_link_libraries(supertux2 PUBLIC LibDiscord)
+  target_link_libraries(supertux2 PUBLIC DiscordRPC)
 endif()
 
 ## Install stuff
