--- a/external/partio_zip/CMakeLists.txt
+++ b/external/partio_zip/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(PartioZip)
 
-add_library(partio_zip OBJECT ${PROJECT_SOURCE_DIR}/zip_manager.cpp ${PROJECT_SOURCE_DIR}/zip_manager.hpp)
-target_link_libraries(partio_zip PUBLIC ZLIB)
-target_include_directories(partio_zip PUBLIC ${PROJECT_SOURCE_DIR})
+add_library(PartioZip OBJECT ${PROJECT_SOURCE_DIR}/zip_manager.cpp ${PROJECT_SOURCE_DIR}/zip_manager.hpp)
+target_link_libraries(PartioZip PUBLIC ZLIB)
+target_include_directories(PartioZip PUBLIC ${PROJECT_SOURCE_DIR})
