--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -31,6 +31,10 @@ make_unit_test(AATriangleTest SOURCE aatriangle_test.cpp
 make_unit_test(CollisionTest SOURCE collision_test.cpp
   EXTERNAL math/rectf.cpp
   LIBRARIES SDL2 DEFINITIONS GLM_ENABLE_EXPERIMENTAL)
+
+make_unit_test(CollisionTest SOURCE collision_test.cpp
+  EXTERNAL math/rectf.cpp
+  LIBRARIES PhysFS DEFINITIONS GLM_ENABLE_EXPERIMENTAL)
 #make_unit_test(DynamicScopedTest SOURCE dynamic_scoped_test.cpp
 #  LIBRARIES SDL2)
 #make_unit_test(FileSystemTest SOURCE file_system_test.cpp
