--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -57,6 +57,11 @@ jobs:
                        openal-soft sdl2 sdl2_image sdl2_ttf freetype harfbuzz \
                        fribidi glib gtk-doc glbinding@2 libraqm zlib
           brew link glbinding@2
+          echo "Find command 1"
+          find /usr/local/opt/webp/lib/ -maxdepth 1
+          echo "Find command 2"
+          find /usr/local/opt/jpeg-xl/lib/ -maxdepth 1
+
           install_name_tool -change \
             '@rpath/libsharpyuv.0.dylib' \
             /usr/local/opt/webp/lib/libsharpyuv.0.dylib \
