--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -59,17 +59,17 @@ jobs:
           brew link glbinding@2
           # echo "Find command 1"
           # find /usr/local/opt/webp/lib/ -maxdepth 1
-          echo "Find command 2"
-          find /usr/local/opt/jpeg-xl/lib/ -maxdepth 1
+          # echo "Find command 2"
+          # find /usr/local/opt/jpeg-xl/lib/ -maxdepth 1
 
           # install_name_tool -change \
           #  '@rpath/libsharpyuv.0.dylib' \
           #  /usr/local/opt/webp/lib/libsharpyuv.0.dylib \
           #  /usr/local/opt/webp/lib/libwebp.7.dylib
-          install_name_tool -change \
-            '@rpath/libjxl_cms.0.11.dylib' \
-            /usr/local/opt/jpeg-xl/lib/libjxl_cms.0.11.dylib \
-            /usr/local/opt/jpeg-xl/lib/libjxl.dylib
+          # install_name_tool -change \
+          #  '@rpath/libjxl_cms.0.11.dylib' \
+          #  /usr/local/opt/jpeg-xl/lib/libjxl_cms.0.11.dylib \
+          #  /usr/local/opt/jpeg-xl/lib/libjxl.dylib
 
           # Something funky happens with freetype if mono is left
           sudo mv /Library/Frameworks/Mono.framework                           \
