--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -31,11 +31,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest]
+        os: [macos-13]
         build_type: [Debug, Release]
         glbinding: [ON, OFF]
         include:
-          - os: macos-latest
+          - os: macos-13
             build_type: Release
             glbinding: OFF
             release: ON
@@ -49,7 +49,7 @@ jobs:
           submodules: recursive
 
       - name: Install macos dependencies
-        if: ${{ matrix.os == 'macos-latest' }}
+        if: ${{ matrix.os == 'macos-13' }}
         run: |
           # Use GLM 1.0.0 as later versions don't build with clang
           HOMEBREW_NO_AUTO_UPDATE=1 brew install --formula ./mk/brew/glm.rb --build-from-source
