--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -58,11 +58,18 @@ jobs:
                        fribidi glib gtk-doc glbinding@2 libraqm zlib
           brew link glbinding@2
 
+          # install_name_tool -change \
+          #  '@rpath/libsharpyuv.0.dylib' \
+          #  /usr/local/opt/webp/lib/libsharpyuv.0.dylib \
+          #  /usr/local/opt/webp/lib/libwebp.7.dylib
+          install_name_tool -change \
+           '@rpath/libjxl_cms.0.11.dylib' \
+           /usr/local/opt/jpeg-xl/lib/libjxl_cms.0.11.dylib \
+           /usr/local/opt/jpeg-xl/lib/libjxl.dylib
+
           # Something funky happens with freetype if mono is left
           sudo mv /Library/Frameworks/Mono.framework                           \
                   /Library/Frameworks/Mono.framework-disabled
-
-          brew ls --verbose sdl2_image
 
       - name: Set compiler
         run: |
