FreeBSD (and others?) error handling
FreeBSD and NetBSD require that execinfo needs to be linked. I didn't see anything regarding this in OpenBSD's (and dragonfly's??) but we can wait for someone to complain or an OpenBSD user sends/creates a patch. I was reading the manpages and all I tested on was FreeBSD. It works here for now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,6 +218,10 @@ endif()
 # $<$<BOOL:WIN32>:{CMAKE_CURRENT_SOURCE_DIR}/data/images/engine/icons/supertux.rc>
 target_include_directories(supertux2 PUBLIC ${CMAKE_BINARY_DIR} src/)
 
+if(CMAKE_SYSTEM_NAME MATCHES "FreeBSD|NetBSD")
+  target_link_options(supertux2 PUBLIC -lexecinfo)
+endif()
+
 if(WIN32)
   include(SuperTux/Win32)
 endif()
