--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -84,6 +84,7 @@ jobs:
             libglbinding-dev \
             libcurl4-openssl-dev \
             libglm-dev \
+            libfmt-dev \
             zlib1g-dev \
             lcov \
             doxygen
@@ -131,8 +132,9 @@ jobs:
             libsdl2-ttf-dev:i386 \
             libfreetype6-dev:i386 \
             libcurl4-openssl-dev:i386 \
-            libglm-dev \
-            zlib1g-dev
+            zlib1g-dev:i386 \
+            libfmt-dev:i386 \
+            libglm-dev
 
           # Nethier GLEW nor glbinding exist in 32-bit for Ubuntu 20.04, so snatch the debs from 16.04 instead
           wget archive.ubuntu.com/ubuntu/pool/main/g/glew/libglew1.13_1.13.0-2_i386.deb && sudo dpkg -i libglew1.13_1.13.0-2_i386.deb
