--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -169,8 +169,7 @@ jobs:
           cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE $ARCH \
                    -DWARNINGS=ON -DWERROR=ON \
                    -DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr   \
-                   -DBUILD_DOCUMENTATION=$MAKE_DOCS -DINSTALL_SUBDIR_BIN=bin   \
-                   -DINSTALL_SUBDIR_SHARE=share/supertux2 -DENABLE_DISCORD=ON
+                   -DBUILD_DOCUMENTATION=$MAKE_DOCS -DENABLE_DISCORD=ON
 
       - name: Build and install
         working-directory: build
