--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -9,6 +9,7 @@ function(make_unit_test test_name)
     list(TRANSFORM mtargs_EXTERNAL PREPEND ${SUPERTUX_SOURCE_DIR}/src/)
   endif()
   add_executable(${test_name} ${mtargs_SOURCE} ${mtargs_EXTERNAL})
+  target_compile_features(${test_name} PRIVATE cxx_std_17)
   target_include_directories(${test_name} PUBLIC ${SUPERTUX_SOURCE_DIR}/src ${mtargs_INCLUDES})
   if (mtargs_DEFINITIONS)
     target_compile_definitions(${test_name} PUBLIC ${mtargs_DEFINITIONS})
