Change add_subdirectory order

--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -167,13 +167,11 @@ jobs:
           mkdir "build"
           cd "build"
 
-          # FIXME I'm not sure what's going on but for some reason we need to
-          # add the CXX_STANDARD flags manually
           cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE $ARCH \
                    -DWARNINGS=ON -DWERROR=ON \
                    -DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr   \
                    -DBUILD_DOCUMENTATION=$MAKE_DOCS -DENABLE_DISCORD=ON \
-                   -DCMAKE_CXX_FLAGS="$ARCH -std=c++17" -DCMAKE_C_FLAGS="$ARCH"
+                   -DCMAKE_CXX_FLAGS="$ARCH" -DCMAKE_C_FLAGS="$ARCH"
 
       - name: Build and install
         working-directory: build
