--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -52,5 +52,6 @@ jobs:
           git status
           git config --global user.email "SuperTux-bot@users.noreply.github.com"
           git config --global user.name "SuperTux Bot"
+          git add *.po || true
           git commit -am "Update translations" || true
           git push https://git:$GH_TOKEN@github.com/SuperTux/supertux.git master
