--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: [32, 64]
-        os: [ubuntu-20.04]
+        os: [ubuntu-latest]
         compiler: [gcc, clang]
         build_type: [Debug, Release]
         glbinding: [ON, OFF]
@@ -40,7 +40,7 @@ jobs:
           - arch: 32
             glbinding: ON
         include:
-          - os: ubuntu-20.04
+          - os: ubuntu-latest
             build_type: Release
             compiler: gcc
             arch: 64
@@ -48,7 +48,7 @@ jobs:
             release: ON
             source: ON
             documentation: ON
-          - os: ubuntu-20.04
+          - os: ubuntu-latest
             build_type: Debug
             compiler: gcc
             arch: 64
@@ -103,14 +103,14 @@ jobs:
       - name: Install 32-bit dependencies
         if: ${{ matrix.arch == 32 }}
         env:
-          DOWNGRADE_PCRE: ${{ matrix.os == 'ubuntu-20.04' && '1' || '' }}
+          DOWNGRADE_PCRE: ${{ matrix.os == 'ubuntu-latest' && '1' || '' }}
         run: |
           sudo dpkg --add-architecture i386
           sudo apt-get update
 
           if [ "$DOWNGRADE_PCRE" ]; then
             # Github is adding a lot of unnecessary deb.sury.org
-            # packages into ubuntu-20.04, this causes
+            # packages into ubuntu-latest, this causes
             # libharfbuzz-dev:i386 to fail due to issues related to
             # libpcre2-8-0 from deb.sury.org. Remove all that and
             # downgrade to official versions.
@@ -170,7 +170,7 @@ jobs:
           GLBINDING: ${{ matrix.glbinding }}
           # FIXME: GoogleTest isn't detected by CMake on Ubuntu 18.04
           # (also check the step that invokes the tests with ./test_supertux2)
-          TESTS: ${{ matrix.os == 'ubuntu-20.04' }}
+          TESTS: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           cmake --version
           $CXX --version
@@ -191,7 +191,7 @@ jobs:
       - name: Run tests
         # FIXME: GoogleTest isn't detected by CMake on Ubuntu 18.04
         # (also check the step that invokes CMake with -DBUILD_TESTS)
-        if: ${{ matrix.os == 'ubuntu-20.04' }}
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         working-directory: build
         run: ./test_supertux2
 
