--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -92,26 +92,9 @@ jobs:
 
       - name: Install 32-bit dependencies
         if: ${{ matrix.arch == 32 }}
-        env:
-          DOWNGRADE_PCRE: ${{ matrix.os == 'ubuntu-20.04' && '1' || '' }}
         run: |
           sudo dpkg --add-architecture i386
           sudo apt-get update
-
-          if [ "$DOWNGRADE_PCRE" ]; then
-            # Github is adding a lot of unnecessary deb.sury.org
-            # packages into ubuntu-20.04, this causes
-            # libharfbuzz-dev:i386 to fail due to issues related to
-            # libpcre2-8-0 from deb.sury.org. Remove all that and
-            # downgrade to official versions.
-            sudo apt-get remove --yes php.* libzip4:amd64
-            sudo apt-get install --yes --allow-downgrades \
-              libpcre2-16-0:amd64=10.34-7 \
-              libpcre2-32-0:amd64=10.34-7 \
-              libpcre2-8-0:amd64=10.34-7 \
-              libpcre2-dev:amd64=10.34-7 \
-              libpcre2-posix2:amd64=10.34-7
-          fi
 
           sudo apt-get install -y \
             cmake \
@@ -136,12 +119,10 @@ jobs:
             libcurl4-openssl-dev:i386 \
             zlib1g-dev:i386 \
             libfmt-dev:i386 \
-            libphysfs-dev:i386 \
             libglm-dev
 
-          # Nethier GLEW nor glbinding exist in 32-bit for Ubuntu 20.04, so snatch the debs from 16.04 instead
-          wget archive.ubuntu.com/ubuntu/pool/main/g/glew/libglew1.13_1.13.0-2_i386.deb && sudo dpkg -i libglew1.13_1.13.0-2_i386.deb
-          wget archive.ubuntu.com/ubuntu/pool/main/g/glew/libglew-dev_1.13.0-2_i386.deb && sudo dpkg -i libglew-dev_1.13.0-2_i386.deb
+          # These libraries don't exist for 32-bit in Ubuntu repositories.
+          vcpkg install --triplet x86-linux physfs glew
 
       - name: Set compiler (gcc)
         if: ${{ matrix.compiler == 'gcc' }}
