--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -149,7 +149,7 @@ jobs:
           mkdir "build"
           cd "build"
 
-          cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE $ARCH \
+          cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE \
                    -DWARNINGS=ON -DWERROR=ON \
                    -DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr   \
                    -DBUILD_DOCUMENTATION=$MAKE_DOCS -DENABLE_DISCORD=ON \
